<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.AddOrUpdateTodoActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_activity" />

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:text="@string/title"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_add_share_et_bg"
        android:gravity="start"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/shape_cursor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/detail"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="@id/tvTitle"
        app:layout_constraintTop_toBottomOf="@id/etTitle"
        app:layout_goneMarginTop="20dp" />

    <EditText
        android:id="@+id/etDetail"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_add_share_et_bg"
        android:gravity="start"
        android:lines="2"
        android:padding="10dp"
        android:textCursorDrawable="@drawable/shape_cursor"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/todoDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:text="@string/todo_date2"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tvDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/shape_todo_date_bg"
        android:gravity="center"
        android:hint="@string/click_to_select_todo_date"
        android:padding="15dp"
        android:textColor="@color/white"
        android:textColorHint="@color/white" />
</LinearLayout>