<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_login_gradient"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/iv_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/wan"
        android:scaleX="1.5"
        android:scaleY="1.5"
        android:src="@mipmap/icon_login_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:scaleX="1.5"
        android:text="@string/wan_an_zuo"
        android:textColor="@color/translucent_white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_icon" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline4">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_login_et_bg"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/wan_an_zuo"
                android:src="@mipmap/home_header_icon_todo" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/account"
                android:background="@null"
                android:cursorVisible="true"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:hint="@string/account"
                android:inputType="text"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@drawable/shape_cursor" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_login_et_bg"
            android:orientation="horizontal"
            android:padding="10dp">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:contentDescription="@string/wan_an_zuo"
                android:src="@mipmap/home_header_icon_todo" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:autofillHints="@string/password"
                android:background="@null"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="20dp"
                android:paddingEnd="10dp"
                android:textCursorDrawable="@drawable/shape_cursor" />
        </LinearLayout>
    </LinearLayout>

    <com.allen.library.SuperTextView
        android:id="@+id/stvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline3"
        app:sCenterTextColor="@color/white"
        app:sCenterTextSize="16sp"
        app:sCenterTextString="@string/login"
        app:sShapeCornersRadius="10dp"
        app:sShapeSelectorNormalColor="@color/orange_FF9800"
        app:sShapeSelectorPressedColor="@color/yellow_DFB073"
        app:sUseShape="true" />

    <TextView
        android:id="@+id/no_account_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:text="@string/have_no_account"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/stvLogin" />

    <com.allen.library.SuperTextView
        android:id="@+id/stvRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="40dp"
        android:padding="15dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/no_account_tip"
        app:sCenterTextColor="@color/white"
        app:sCenterTextSize="16sp"
        app:sCenterTextString="@string/register"
        app:sShapeCornersRadius="10dp"
        app:sShapeSelectorNormalColor="@color/purple_958BFF"
        app:sShapeSelectorPressedColor="@color/solid_purple"
        app:sUseShape="true" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.3" />
</androidx.constraintlayout.widget.ConstraintLayout>